--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,26 +5,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AnythingLLM | Your personal LLM trained on anything</title>
+    <title>Agentos | AI-powered Desktop CRM</title>
 
-    <meta name="title" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta name="description" content="AnythingLLM | Your personal LLM trained on anything">
+    <meta name="title" content="Agentos | AI-powered Desktop CRM">
+    <meta name="description" content="Agentos | Self-hosted AI CRM with workflow automation">
 
     <!-- Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anythingllm.com">
-    <meta property="og:title" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="og:description" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="og:image"
-      content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png">
+    <meta property="og:url" content="https://github.com/Roberto-rgb-code/agentos">
+    <meta property="og:title" content="Agentos | AI-powered Desktop CRM">
+    <meta property="og:description" content="Agentos | Self-hosted AI CRM with workflow automation">
+    <meta property="og:image" content="">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anythingllm.com">
-    <meta property="twitter:title" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="twitter:description" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="twitter:image"
-      content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png">
+    <meta property="twitter:url" content="https://github.com/Roberto-rgb-code/agentos">
+    <meta property="twitter:title" content="Agentos | AI-powered Desktop CRM">
+    <meta property="twitter:description" content="Agentos | Self-hosted AI CRM with workflow automation">
+    <meta property="twitter:image" content="">
 
     <link rel="icon" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
